# encrypted-AutoMerge

./: .gitignore  .gitmodules  Makefile  README.md  package-lock.json  package.json
docs/: prototype.md
docs/japanese/: prototype.md
frontend/: .gitignore  .prettierignore  README.md  next.config.ts  package-lock.json  package.json
frontend/docs/: document.md  prototype.md
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/doc/: ClientDocPage.tsx  page.tsx
frontend/src/app/doc/[doc_id]/: ClientDocPage.tsx  page.tsx
frontend/src/application/services/: DocumentService.ts  EditorService.ts
frontend/src/application/services/__test__/: DocumentService.test.ts  EditorService.test.ts
frontend/src/application/types/: Document.ts  fhe.ts
frontend/src/components/: EditorPage.tsx  Ruler.tsx  Toolbar.tsx  TopBar.tsx
frontend/src/infrastructure/crypto/: DocumentEncryption.ts  MockDocumentEncryption.ts  TfheShortint.ts
frontend/src/infrastructure/storage/: IndexedDBKeyStorage.ts  KeyStorage.ts  ServerKeyStorage.ts
frontend/src/infrastructure/sync/: SyncClient.ts  WebSocketSyncClient.ts
frontend/src/worker/: ckgen-worker.js
infra/terraform/: main.tf  terraform.tfstate.backup  variables.tf
scripts/: amplify_deploy_frontend.sh  build_wasm.sh  common.sh  ecr_build_push.sh
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: main.rs
wasm/test_wasm/: Cargo.toml
wasm/test_wasm/src/: lib.rs
